Add alternating row colors on "Edit" screen for the blue WP admin color scheme

--- a/admin/edit.css
+++ b/admin/edit.css
@@ -112,6 +112,10 @@ body.wait * {
 #edit-form-body .odd {
 	background-color: #eeeeee;
 }
+/* alternating row colors for the blue color scheme */
+.admin-color-classic #edit-form-body .odd {
+	background-color: #e5f6ff;
+}
 
 #edit-form-body textarea {
 	display: block;
@@ -164,7 +168,9 @@ body.wait * {
 
 /* hightlighting of table head and foot in table cells */
 #edit-form-body .head-row,
-#edit-form-body .foot-row {
+#edit-form-body .foot-row,
+.admin-color-classic #edit-form-body .head-row,
+.admin-color-classic #edit-form-body .foot-row {
 	background-color: #d9edf7;
 }
 
