Revert CSS change from c5f1ce65, as this would affect for example the table Shortcode inline inputs; We only need to change the color of the "Paginate entries" field

--- a/admin/edit.css
+++ b/admin/edit.css
@@ -206,3 +206,8 @@ body.wait * {
 #tablepress_edit-table-manipulation .column-2 {
 	width: 55%;
 }
+
+/* gray background for disabled "Pagination entries" field */
+#option-datatables-paginate_entries[disabled] {
+	background-color: #eeeeee;
+}
