--- a/css/default.css
+++ b/css/default.css
@@ -239,8 +239,8 @@ html[xmlns] .dataTables_wrapper { display: block; }
 }
 
 /* RTL languages */
-.tablepress-rtl {
-	direction: rtl;
+.tablepress-rtl td,
+.tablepress-rtl th {
 	text-align: right;
 }
 .dataTables_wrapper .tablepress-rtl .sorting,
