Load HiDPI admin menu icon on all screens, on "post.php" and "post-new.php" also load HiDPI TinyMCE Table button icon (if needed); Don't do this on TablePress screens, as the CSS is part of common.css there

--- a/admin/common.css
+++ b/admin/common.css
@@ -23,9 +23,8 @@
 	}
 	/* Admin Menu icon */
 	#toplevel_page_tablepress .wp-menu-image {
-		background-image: url(tablepress-icon-small-2x.png);
+		background: url(tablepress-icon-small-2x.png) no-repeat 7px 7px;
 		background-size: 16px 16px;
-		background-position: 7px 7px;
 	}
 	#toplevel_page_tablepress .wp-menu-image img {
 		display: none;
