Default CSS: Set width of Length Change drop down and search input field, as some themes set it to 100%, which then can extend into a sidebar

--- a/css/default.css
+++ b/css/default.css
@@ -236,6 +236,7 @@ html[xmlns] .dataTables_wrapper { display: block; }
 .dataTables_wrapper label select {
 	display: inline;
 	margin: 2px;
+	width: auto;
 }
 
 /* RTL languages */
