--- a/admin/codemirror.css
+++ b/admin/codemirror.css
@@ -149,6 +149,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 .CodeMirror-gutters {
   position: absolute; left: 0; top: 0;
   height: 100%;
+  padding-bottom: 30px;
   z-index: 3;
 }
 .CodeMirror-gutter {
@@ -198,6 +199,10 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   position: relative;
   z-index: 2;
   overflow: auto;
+}
+
+.CodeMirror-widget {
+  display: inline-block;
 }
 
 .CodeMirror-wrap .CodeMirror-scroll {
@@ -274,7 +279,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	background-color: #eeeeee;
 }
 #option-custom-css:focus,
-#tablepress-page .CodeMirror-focused {
+#tablepress-page .CodeMirror-focused .CodeMirror-scroll {
 	border-color: #a1a1a1;
 	-webkit-box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
