Remove unnecessary CSS selectors in default CSS

--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -10,7 +10,6 @@
  * @since 1.0.0
  */
 
-
 @font-face {
 	font-family: 'TablePress';
 	src: url('tablepress.eot');
@@ -231,11 +230,8 @@
 	float: none !important;
 }
 .dataTables_wrapper .sorting div:before,
-.dataTables_wrapper .sorting div:after,
 .dataTables_wrapper .sorting_asc div:before,
-.dataTables_wrapper .sorting_asc div:after,
-.dataTables_wrapper .sorting_desc div:before,
-.dataTables_wrapper .sorting_desc div:after {
+.dataTables_wrapper .sorting_desc div:before {
 	font-family: TablePress;
 	font-weight: normal;
 	font-size: 14px;
