CSS fixes for certain elements that should remain LTR (props Mulli Bahr)

--- a/css/default-rtl.css
+++ b/css/default-rtl.css
@@ -278,3 +278,16 @@
 	margin: 2px;
 	width: auto;
 }
+
+/*
+ * Fixes for certain elements that should remain LTR
+ */
+#tablepress_about-debug-version-information .inside p,
+#table-information-shortcode,
+#row-import-source td.column-2,
+#row-import-type td.column-2 {
+	direction: ltr;
+}
+#table-new-id {
+	float:right;
+}
