--- a/admin/css/edit.css
+++ b/admin/css/edit.css
@@ -94,7 +94,11 @@ body.wait * {
 }
 #tablepress-page #tablepress_edit-table-data {
 	display: inline-block; /* stretch to the width of the table */
-	min-width: 99.9%; /* but use the full width, bus minus like 1px as the box is wider than the others otherwise */
+	min-width: 99.9%; /* but use the full width, but minus like 1px as the box is wider than the others otherwise */
+}
+/* Re-instate hide-if-js functionality, due to higher specificity of ID selectors (necessary when hiding postbox) */
+#tablepress-page #tablepress_edit-table-data.hide-if-js {
+	display: none;
 }
 
 /* table cells */
